# Lookup-Argument

./: CLAUDE.md  INCREMENTAL_CSV_FEATURES.md  README.md  run_benchmark_with_csv.sh  test_baloo_optimization.rs  test_parallel_comparison.sh
benchmark/: Cargo.toml  benchmark_results.csv  benchmark_results_v2.csv  diagram.py
benchmark/benches/: proof_system.rs
plonkish_backend/: Cargo.toml
plonkish_backend/examples/: logging_demo.rs
plonkish_backend/src/: backend.rs  lib.rs  logging.rs  util.rs
plonkish_backend/src/backend/: baloo.rs  caulk.rs  cq.rs  lasso.rs  logupgkr.rs  plookup.rs
plonkish_backend/src/backend/baloo/: key.rs  preprocessor.rs  prover.rs  util.rs  verifier.rs
plonkish_backend/src/backend/caulk/: preprocessor.rs  prover.rs  util.rs  verifier.rs
plonkish_backend/src/backend/cq/: preprocessor.rs  prover.rs  util.rs  verifier.rs
plonkish_backend/src/backend/hyperplonk/: util.rs
plonkish_backend/src/backend/lasso/: affine_prod.rs  mle_poly.rs  preprocessor.rs  prover.rs  sostable.rs  transcript.rs  types.rs  util.rs  verifier.rs
plonkish_backend/src/backend/lasso/memory_checking/: prover.rs  verifier.rs
plonkish_backend/src/backend/lasso/prover/: mod.rs  (+1 more)
plonkish_backend/src/backend/logupgkr/: preprocessor.rs  prover.rs  util.rs  verifier.rs
plonkish_backend/src/backend/plookup/: preprocessor.rs  prover.rs  util.rs  verifier.rs
plonkish_backend/src/pcs/multilinear/: ipa.rs  kzg.rs
plonkish_backend/src/pcs/univariate/: ipa.rs  kzg.rs
plonkish_backend/src/piop/: gkr.rs
plonkish_backend/src/piop/gkr/: fractional_sum_check.rs  grand_product.rs
plonkish_backend/src/piop/sum_check/: classic.rs
plonkish_backend/src/poly/: multilinear.rs  univariate.rs
plonkish_backend/src/util/: arithmetic.rs  benchmark.rs  testing.rs  transcript.rs
plonkish_backend/src/util/arithmetic/: fft.rs
(+2 files in other folders)
